# grpc-proto-rust-flutter-template

./: .gitignore  README.md  docker-compose.yaml
backend/: .air.toml  .env.example  Dockerfile  Makefile  go.mod  go.sum
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: main.rs
backend/cmd/server/: main.go
backend/internal/auth/: service.go  validation.go
backend/internal/config/: config.go
backend/internal/middleware/: logging.go
backend/pkg/jwt/: jwt.go
backend/pkg/logger/: logger.go
backend/pkg/password/: password.go
backend/proto/: auth.pb.go  auth_grpc.pb.go
backend/scripts/: install-protoc.sh
docs/: api-spec.md  go-rust-migrate.md  local-dev.md  plan.md
envoy/: envoy.yaml
frontend/: pubspec.yaml
frontend/lib/core/router/: app_router.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/widgets/: animated_button.dart  gradient_background.dart  password_strength_indicator.dart  social_login_buttons.dart
frontend/lib/features/auth/data/datasources/: auth_remote_datasource.dart
frontend/lib/features/auth/data/repositories/: auth_repository_impl.dart
frontend/lib/features/auth/domain/repositories/: auth_repository.dart
frontend/lib/features/auth/presentation/bloc/: auth_bloc.dart  auth_event.dart  auth_state.dart
frontend/lib/features/auth/presentation/pages/: forgot_password_page.dart  login_page.dart  register_page.dart  reset_password_page.dart
frontend/lib/features/dashboard/data/datasources/: dashboard_mock_datasource.dart  (+1 more)
prometheus/: prometheus.yml
proto/: auth.proto
(+15 files in other folders)
